--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,12 @@ asgiref==3.6.0
 backports.zoneinfo==0.2.1
 dj-database-url==1.2.0
 Django==3.2.17
+django-allauth==0.52.0
 gunicorn==20.1.0
+oauthlib==3.2.2
 psycopg2==2.9.5
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
