--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+astroid==2.14.1
 backports.zoneinfo==0.2.1
 dj-database-url==1.2.0
 Django==3.2.17
@@ -7,6 +8,7 @@ gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.5
 PyJWT==2.6.0
+pylint==2.16.1
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
