--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-asgiref==3.6.0
 astroid==2.14.1
-backports.zoneinfo==0.2.1
-dj-database-url==1.2.0
-Django==3.2.17
-django-allauth==0.52.0
-gunicorn==20.1.0
-oauthlib==3.2.2
-psycopg2==2.9.5
-PyJWT==2.6.0
+dill==0.3.6
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+platformdirs==3.0.0
 pylint==2.16.1
-python3-openid==3.2.0
-pytz==2022.7.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.3
+tomlkit==0.11.6
+wrapt==1.14.1
