--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backports.zoneinfo==0.2.1
 dj-database-url==1.2.0
 Django==3.2.17
 django-allauth==0.52.0
+django-crispy-forms==1.14.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.5
