--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.52.0
 django-crispy-forms==1.14.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==2.6.0
 pylint==2.16.1
