--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ PyJWT==2.6.0
 pylint==2.16.1
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+python==3.8.11
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
