--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
 asgiref==3.6.0
 astroid==2.14.1
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
+boto3==1.26.84
+botocore==1.29.84
 dj-database-url==0.5.0
 Django==3.2.17
 django-allauth==0.52.0
 django-countries==7.5.1
 django-crispy-forms==1.14.0
 django-pandas==0.6.6
+django-storages==1.13.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
+jmespath==1.0.1
 numpy==1.24.2
 oauthlib==3.2.2
 pandas==1.5.3
 Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==2.6.0
+pylint==2.16.1
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 sqlparse==0.4.3
 stripe==5.2.0
