--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.6.0
 astroid==2.14.1
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 boto3==1.26.84
 botocore==1.29.84
 dj-database-url==0.5.0
